--- a/esercizi/src/app/nav-bar/nav-bar.component.scss
+++ b/esercizi/src/app/nav-bar/nav-bar.component.scss
@@ -1,6 +1,17 @@
 :host {
   mat-toolbar {
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    img {
+      width: 100px;
+    }
+
+    .menu > span:hover {
+      color: grey;
+      cursor: pointer;
+    }
   }
   .example-spacer {
     flex: 1 1 auto;
