messo dialog component in users-menu e passato parametri dellutente

--- a/esercizi/src/app/nav-bar/nav-bar.component.html
+++ b/esercizi/src/app/nav-bar/nav-bar.component.html
@@ -13,10 +13,9 @@
     "
   >
     <span routerLink="/home">Home</span>
+    <span routerLink="/users">Users</span>
     <span routerLink="/service">Service</span>
     <span routerLink="/about">About us</span>
-
-    <span routerLink="/other">Other</span>
   </div>
 
   <span class="example-spacer"></span>
