--- a/esercizi/src/app/nav-bar/nav-bar.component.html
+++ b/esercizi/src/app/nav-bar/nav-bar.component.html
@@ -12,9 +12,17 @@
       justify-content: flex-end;
     "
   >
-    <span routerLink="/home">Home</span>
-    <span routerLink="/users">Users</span>
-    <span routerLink="/service">Service</span>
+    <span routerLink="/home"
+      >ES.Giorno-<span style="color: orange">1</span> Home</span
+    >
+    <span routerLink="/users"
+      >ES.Giorno-<span style="color: orange">1</span>
+
+      Users</span
+    >
+    <span routerLink="/service"
+      >ES.Giorno-<span style="color: blue">2</span> Service</span
+    >
     <span routerLink="/about">About us</span>
   </div>
 
