--- a/esercizi/src/app/service/service.component.html
+++ b/esercizi/src/app/service/service.component.html
@@ -1,1 +1,12 @@
-<p>service works!</p>
+<div style="display: flex">
+  <div class="es es-a">
+    <h1>esercizio-a</h1>
+  </div>
+  <div class="es es-a">
+    <h1>esercizio-b</h1>
+
+    <button mat-button color="warn" (click)="openDialog()">
+      clicca per aprire la tabella
+    </button>
+  </div>
+</div>
